upd lab6