@@ -20,16 +20,16 @@ public class History implements Commandable, Serializable {
     @Override
     public Response execute(String[] input) {
         if (history.getHistory().isEmpty()) {
-            return new Response(Status.REQUEST_ERROR, "Вы ещё не вводили никаких команд.", collection);
+            return new Response(Status.REQUEST_ERROR, "Вы ещё не вводили никаких команд.");
         }
         ArrayList<Commandable> commandsList = history.getHistory();
-        commandsList.removeLast();
+        commandsList.remove(commandsList.size() - 1);
         StringBuilder sb = new StringBuilder();
         for (Commandable command : commandsList) {
             sb.append(command.getName());
         }
         history.add(new History(collection, history));
-        return new Response(Status.OK, sb.toString(), collection);
+        return new Response(Status.OK, sb.toString());
     }
     @Override
     public String getName() {
